[project]
name = "plygrnd-obs"
version = "0.1.0"
description = "For scripts performing observational analyses"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fsspec>=2026.2.0",
    "intake>=2.0.8",
    "ipfsspec>=0.6.0",
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "moist-thermodynamics>=0.0.5",
    "netcdf4>=1.7.4",
    "pip>=26.0.1",
    "ruff>=0.15.0",
    "seaborn>=0.13.2",
    "xarray>=2026.1.0",
    "zarr>=3.1.5",
]
